--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,7 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode11.2.1
-language: swift
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+language: objective-c
+osx_image: xcode10.2
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/ToastFancy.xcworkspace -scheme ToastFancy-Example -sdk iphonesimulator13.2 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+ - xcodebuild -scheme ToastFancy -sdk iphonesimulator build
